# HinetPy

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .travis.yml  CITATION.cff  Changelog.rst  Hinet.cfg  HinetContDownload.py  HinetContRequest.py  HinetDoctor.py  HinetJMADownload.py  HinetJMARequest.py  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  StationSelector.py  api.html  appendix.html  ch2pz.py  changelog.html  environment.yml  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pyproject.toml  rdhinet.py  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  transfer.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black-command.yml  check.yml  ci.yml  docs.yml  draft-pdf.yml  format-command.yml  pypi-publish.yml  slash-command-dispatch.yml  tests.yml
.travis/: install_win32tools.py
HinetPy/: __init__.py  _version.py  channel.py  client.py  header.py  utils.py  win32.py
_modules/: index.html
_modules/HinetPy/: client.html  header.html  utils.html  win32.html
_sources/: api.rst.txt  changelog.md.txt  changelog.rst.txt  examples.md.txt  examples.rst.txt  index.rst.txt  installation.md.txt  installation.rst.txt  tutorial.md.txt
_sources/api/: HinetPy.client.md.txt  HinetPy.utils.md.txt  HinetPy.utils.rst.txt
_sources/appendix/: channeltable.rst.txt  response.rst.txt  win2sac.rst.txt
_sources/examples/: example1.rst.txt
_sources/tutorial/: conversion.md.txt  conversion.rst.txt  get-catalog.md.txt  get-catalog.rst.txt  get-continuous-waveform.md.txt  get-started.md.txt  get-started.rst.txt
_static/: documentation_options.js
api/: HinetPy.channel.html  HinetPy.client.html  HinetPy.header.html  HinetPy.utils.html  HinetPy.win32.html
appendix/: catwin32.html  channeltable.html  response.html  win2sac.html
ci/: build-docs.sh  install-win32tools.sh
docs/: FAQ.md  FAQs.md  LICENSE.md  Makefile  api.rst  appendix.rst  changelog.rst  conf.py  first-try.rst  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  mkdocs.yml  network-codes.md  networks.md  quick-start.md  scripts.md  tutorial.rst
docs/_templates/: comments.html  layout.html
docs/api/: HinetPy.channel.md  HinetPy.client.rst  HinetPy.header.md  HinetPy.header.rst  HinetPy.win32.md
docs/appendix/: catwin.rst  catwin32.md  catwin32.rst  channeltable.rst  response.rst  win2sac.md  win2sac.rst
docs/examples/: events.csv  example1.md  example1.py  example1.rst  example2.md  example2.py  example2.rst
docs/locale/zh_CN/LC_MESSAGES/: api.po  appendix.po  changelog.po  examples.po  first-try.po  index.po  installation.po  license.po  tutorial.po
docs/locale/zh_CN/LC_MESSAGES/api/: HinetPy.client.po  HinetPy.header.po  HinetPy.utils.po  HinetPy.win32.po
docs/locale/zh_CN/LC_MESSAGES/appendix/: catwin32.po  channeltable.po  response.po  win2sac.po
docs/locale/zh_CN/LC_MESSAGES/examples/: example1.po  example2.po
docs/locale/zh_CN/LC_MESSAGES/tutorial/: conversion.po  get-catalog.po  get-continuous-waveform.po  get-event-waveform.po  get-started.po  get-waveform.po  get_catalog.po  get_waveform.po
docs/tutorial/: conversion.rst  get-continuous-waveform.md  get-continuous-waveform.rst  get-event-waveform.md  get-event-waveform.rst  get-started.md  get-started.rst  get-waveform.rst  get_catalog.rst  get_waveform.rst
examples/: example1.html  example2.html
info/: code.lst
paper/: paper.bib  paper.md
tests/: 0101_2017031100_2.cnt  Hinet.cfg  localtest_channels.py  localtest_client_multi_threads.py  notest_header.py  test-HinetContRequest.py  test-HinetDoctor.py  test-JMARequest.py  test-ch2pz.py  test-rdhinet.py  test_channel.py  test_client.py  test_client_login.py  test_client_nologin.py  test_header.py  test_utils.py  test_win32.py
tests/data/: 0101_201701010000_3.cnt  0101_20170311.ch  2017010100000101VM.cnt  2017010100010101VM.cnt  2017010100020101VM.cnt
tutorial/: conversion.html  get-catalog.html  get-continuous-waveform.html  get-event-waveform.html  get-started.html
zh_CN/: .buildinfo  api.html  appendix.html  changelog.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
zh_CN/_modules/: index.html
zh_CN/_modules/HinetPy/: client.html  header.html  utils.html  win32.html
zh_CN/_sources/: api.md.txt  appendix.md.txt  appendix.rst.txt  changelog.md.txt  changelog.rst.txt  index.rst.txt  installation.rst.txt  tutorial.rst.txt
zh_CN/_sources/api/: HinetPy.channel.rst.txt  HinetPy.win32.rst.txt
zh_CN/_sources/appendix/: catwin32.md.txt  catwin32.rst.txt  channeltable.md.txt  response.md.txt
zh_CN/_sources/examples/: example2.rst.txt
zh_CN/_sources/tutorial/: conversion.rst.txt  get-continuous-waveform.rst.txt  get-event-waveform.rst.txt
zh_CN/_static/: documentation_options.js
zh_CN/api/: HinetPy.channel.html  HinetPy.client.html  HinetPy.header.html  HinetPy.utils.html  HinetPy.win32.html
zh_CN/appendix/: catwin32.html  channeltable.html  response.html  win2sac.html
zh_CN/examples/: example1.html  example2.html
zh_CN/tutorial/: conversion.html  get-catalog.html  get-continuous-waveform.html  get-event-waveform.html  get-started.html
